--- a/RadiusR.API.Test_Unit/Properties/Resources.resx
+++ b/RadiusR.API.Test_Unit/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,7 +60,6 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -69,10 +68,9 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -87,10 +85,9 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -112,105 +109,9 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AuthenticationFailed" xml:space="preserve">
-    <value>Authentication Failed</value>
-  </data>
-  <data name="BillsNotFound" xml:space="preserve">
-    <value>Can't be empty bill id list</value>
-  </data>
-  <data name="CardInformationNotFound" xml:space="preserve">
-    <value>Card information is not found</value>
-  </data>
-  <data name="ContactPhoneNoNotFound" xml:space="preserve">
-    <value>Contact phone no not found</value>
-  </data>
-  <data name="CustomerMailNotFound" xml:space="preserve">
-    <value>Customer e-mail address not found.</value>
-  </data>
-  <data name="EArchivePDFNotFound" xml:space="preserve">
-    <value>E-archive pdf not found</value>
-  </data>
-  <data name="Failed" xml:space="preserve">
-    <value>Failed</value>
-  </data>
-  <data name="HasActiveAutoPayment" xml:space="preserve">
-    <value>This card has active auto payment. Firstly, remove auto payment from card</value>
-  </data>
-  <data name="HasCashierPays" xml:space="preserve">
-    <value>Has Cashier Pays</value>
-  </data>
-  <data name="InternalServerError" xml:space="preserve">
-    <value>Internal Server Error</value>
-  </data>
-  <data name="InvalidBillState" xml:space="preserve">
-    <value>Invalid Bill State</value>
-  </data>
-  <data name="InvalidOnlinePassword" xml:space="preserve">
-    <value>Invalid Online Password</value>
-  </data>
-  <data name="InvalidOperation" xml:space="preserve">
-    <value>Invalid Operation</value>
-  </data>
-  <data name="InvalidPaymentAmount" xml:space="preserve">
-    <value>Invalid Payment Amount</value>
-  </data>
-  <data name="MobileExpressIsDeactive" xml:space="preserve">
-    <value>Add card is deactive</value>
-  </data>
-  <data name="NotEnoughCredit" xml:space="preserve">
-    <value>Not Enough Credit</value>
-  </data>
-  <data name="NullObjectFound" xml:space="preserve">
-    <value>Null object error</value>
-  </data>
-  <data name="OnlinePasswordCantBeNull" xml:space="preserve">
-    <value>Online Password Can't Be Null</value>
-  </data>
-  <data name="OnlyOneGatewayAllowed" xml:space="preserve">
-    <value>Only One Gateway Allowed</value>
-  </data>
-  <data name="PaidTypeNull" xml:space="preserve">
-    <value>SubscriptionPaidType is required</value>
-  </data>
-  <data name="PartnerIsNotActive" xml:space="preserve">
-    <value>Client is not active</value>
-  </data>
-  <data name="PaymentPermissionNotFound" xml:space="preserve">
-    <value>You don't have payment permission</value>
-  </data>
-  <data name="QuotaNotFound" xml:space="preserve">
-    <value>Quota information not found</value>
-  </data>
-  <data name="QuotaTariffNotFound" xml:space="preserve">
-    <value>Customer don't have quota tariff</value>
-  </data>
-  <data name="SpecialOfferError" xml:space="preserve">
-    <value>Failed. Registration is not possible with reference number.</value>
-  </data>
-  <data name="SubscriberNotFound" xml:space="preserve">
-    <value>Subscriber not found</value>
-  </data>
-  <data name="Success" xml:space="preserve">
-    <value>Success</value>
-  </data>
-  <data name="SupportRequestNotFound" xml:space="preserve">
-    <value>Support request is not found</value>
-  </data>
-  <data name="TariffNotFound" xml:space="preserve">
-    <value>Tariff not found</value>
-  </data>
-  <data name="TelekomCredentialsNotFound" xml:space="preserve">
-    <value>Telekom credentials not found</value>
-  </data>
-  <data name="TelekomWebServiceError" xml:space="preserve">
-    <value>Telekom web service error</value>
-  </data>
-  <data name="WrongSMSValidation" xml:space="preserve">
-    <value>SMS validation is failed</value>
-  </data>
 </root>
