--- a/RadiusR.API.CustomerWebService/Localization/ErrorMessages.resx
+++ b/RadiusR.API.CustomerWebService/Localization/ErrorMessages.resx
@@ -162,6 +162,12 @@
   <data name="InvalidPaymentAmount" xml:space="preserve">
     <value>Invalid Payment Amount</value>
   </data>
+  <data name="InvalidPhoneNo" xml:space="preserve">
+    <value>Invalid phone no.</value>
+  </data>
+  <data name="InvalidSerialNo" xml:space="preserve">
+    <value>Invalid serial no.</value>
+  </data>
   <data name="MaxLength" xml:space="preserve">
     <value>{0} has invalid length. Max Length must be {1}.</value>
   </data>
