--- a/RadiusR.API.CustomerWebService/Localization/ErrorMessages.tr-tr.resx
+++ b/RadiusR.API.CustomerWebService/Localization/ErrorMessages.tr-tr.resx
@@ -162,6 +162,12 @@
   <data name="InvalidPaymentAmount" xml:space="preserve">
     <value>Geçersiz ödeme tutaru</value>
   </data>
+  <data name="InvalidPhoneNo" xml:space="preserve">
+    <value>Geçersiz telefon numarası</value>
+  </data>
+  <data name="InvalidSerialNo" xml:space="preserve">
+    <value>Geçersiz seri numarası</value>
+  </data>
   <data name="MaxLength" xml:space="preserve">
     <value>{0} uzunluğu fazla. En fazla {1} karakter olmalı.</value>
   </data>
