# fixed issues for localization

--- a/RadiusR.API.CustomerWebService/Localization/Common.tr-tr.resx
+++ b/RadiusR.API.CustomerWebService/Localization/Common.tr-tr.resx
@@ -265,10 +265,10 @@
     <value>Download Noise Margin</value>
   </data>
   <data name="EArchiveMailBody" xml:space="preserve">
-    <value>Your {0} dated invoice is attached. We wish you a nice day.</value>
+    <value>{0} tarihli faturanız ekte yer almaktadır. İyi günler dileriz.</value>
   </data>
   <data name="EArchiveMailSubject" xml:space="preserve">
-    <value>Invoice information with date {0}</value>
+    <value>{0} tarihli fatura bilgisi</value>
   </data>
   <data name="EArchivePDF" xml:space="preserve">
     <value>E-Arşiv PDF'i</value>
