--- a/RadiusR.API.CustomerWebService/Localization/Common.resx
+++ b/RadiusR.API.CustomerWebService/Localization/Common.resx
@@ -268,10 +268,10 @@
     <value>Upload Noise Margin</value>
   </data>
   <data name="EArchiveMailBody" xml:space="preserve">
-    <value>{0} tarihli faturanız ekte yer almaktadır. İyi günler dileriz.</value>
+    <value>Your {0} dated invoice is attached. We wish you a nice day.</value>
   </data>
   <data name="EArchiveMailSubject" xml:space="preserve">
-    <value>{0} tarihli fatura bilgisi</value>
+    <value>Invoice information with date {0}</value>
   </data>
   <data name="EArchivePDF" xml:space="preserve">
     <value>E-Archive PDF</value>
